# neurollm

./: .gitignore  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: __init__.py  models.py
data/: __init__.py  dataset.py  download.py  preprocessing.py
evaluation/: __init__.py  benchmark.py  demo.py  metrics.py
kernels/: __init__.py  freq_band_attention.py  freq_band_attention_cuda.cu
model/: __init__.py  transformer.py
tests/: __init__.py  test_v100.py  test_v101.py  test_v102.py  test_v103.py  test_v104.py  test_v105.py  test_v106.py  test_v107.py  test_v108.py  test_v109.py
training/: __init__.py  finetune.py  pretrain.py  run_pretrain.py
